--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -145,6 +145,19 @@ footer {
 
 /* __________________ MEDIA QUERIES __________________ */
 
-
+                    .tooltip {   
+                        position: absolute;         
+                        text-align: center;         
+                        width: 100px;                    
+                        height: 48px;                   
+                        padding: 2px;               
+                        font: 12px sans-serif;      
+                        background: lightsteelblue; 
+                        border: 0px;        
+                        border-radius: 8px;         
+                        pointer-events: none;  
+                        display: flex;
+                        align-items: center;
+                    }
 
 
