--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,5 +1,6 @@
 body {
 		margin: 0;
+    background: #F0F0F0;
 }
 
 header {
@@ -7,8 +8,8 @@ header {
     align-items: center;
     padding: 0px 30px;
     height: 100px;
-    background-color: #104E8B;
-    color: #ffffff;
+    background-color: #402158;
+    color: #c9bfb5;
 }
 
 .tab-container {
@@ -27,7 +28,7 @@ header {
 }
 
 .selected-tab {
-  border-bottom: 3px solid #ffffff;
+  border-bottom: 3px solid #c9bfb5;
   padding-bottom: 4px;
 }
 
@@ -36,7 +37,6 @@ header p {
 }
 
 main {
-    border: 1px solid black;
     margin: 80px 90px
 }
 
@@ -64,10 +64,10 @@ table {
 thead th {
     font-size:16px;
     font-weight:400;
-    color:#ffffff;
+    color:#c9bfb5;
     text-align:left;
     padding:20px;
-    background-color: #104E8B; 
+    background-color: #402158; 
 }
 
 thead th:first-child {
@@ -87,7 +87,7 @@ tbody tr td {
 }
 
 tbody tr:nth-child(2n) {
-  background:#f0f3f5;
+  background:#e2e9ff;
 }
 
 tbody:hover > tr td {
@@ -122,7 +122,26 @@ tbody:hover > tr:hover td {
 
 footer {
     height: 100px;
-    background-color: #104E8B;
+    background-color: #402158;
+}
+
+
+/* __________________ MAP __________________ */
+
+.tooltip {   
+    position: absolute;         
+    text-align: center;         
+    width: 100px;                    
+    height: 48px;                   
+    padding: 2px;               
+    font: 12px sans-serif;      
+    background: #140e36; 
+    color: #e2e9ff;
+    border: 0px;        
+    border-radius: 8px;         
+    pointer-events: none;  
+    display: flex;
+    align-items: center;
 }
 
 
@@ -142,22 +161,5 @@ footer {
     }
 }
 
-
-/* __________________ MEDIA QUERIES __________________ */
-
-                    .tooltip {   
-                        position: absolute;         
-                        text-align: center;         
-                        width: 100px;                    
-                        height: 48px;                   
-                        padding: 2px;               
-                        font: 12px sans-serif;      
-                        background: lightsteelblue; 
-                        border: 0px;        
-                        border-radius: 8px;         
-                        pointer-events: none;  
-                        display: flex;
-                        align-items: center;
-                    }
 
 
